--- a/app/src/main/res/layout/magasins_recycler_item.xml
+++ b/app/src/main/res/layout/magasins_recycler_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:clickable="true"
+    xmlns:gl="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
 
@@ -19,12 +20,13 @@
         app:cardElevation="10dp"
         app:cardPreventCornerOverlap="false">
 
-        <LinearLayout
-            android:background="#fff"
+        <net.colindodd.gradientlayout.GradientRelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:padding="10dp">
+            android:minHeight="170dp"
+            android:padding="10dp"
+            gl:end_color="@color/gradientJaune"
+            gl:start_color="@color/gradientOrange">
 
             <ImageView
                 android:layout_width="88dp"
@@ -70,7 +72,9 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
-        </LinearLayout>
+
+
+        </net.colindodd.gradientlayout.GradientRelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
