--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,7 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_accueil"
+            android:checked="true"
             android:title="@string/menu_accueil" />
         <item
             android:id="@+id/nav_shop"
@@ -26,19 +27,14 @@
             android:title="@string/menu_amis" />
     </group>
 
-
-
     <item android:title="">
         <menu>
-
-
             <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_settings"
             android:title="@string/menu_option">
 
             </item>
-
 
             <item
                 android:id="@+id/dark_mode"
