--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--colors for dark mode-->
-    <color name="contentBodyColor">#2B283D</color>
+    <color name="contentBodyColor">#251933</color>
     <color name="contentTextColor">#fff</color>
     <color name="bottomNavigationBackground">#000000</color>
     <color name="miniTitleColor">#fff</color>
-    <color name="darkTextColor">#E91E63</color>
+    <color name="darkTextColor">#FFF</color>
+    <color name="toolbar">#251933</color>
 
-
-    <color name="gradientOrange">#E91E63</color>
+    <color name="gradientJaune">#9813F3</color>
+    <color name="gradientOrange">#742BEF</color>
     <color name="gradientOrange1">#E91E63</color>
     <color name="gradientOrange2">#E91E63</color>
-
+    <color name="gradientViolet">#F78D3C</color>
 
 </resources>
