--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="primaryTextColor">#019AE8</color>
     <color name="whiteTextColor">#fff</color>
     <color name="frutorial_title">#4c4c4c</color>
-
+    <color name="toolbar">#FCFCFC</color>
     <!--colors for light mode-->
     <color name="contentBodyColor">#FCFCFC</color>
     <color name="contentTextColor">#020000</color>
