--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,6 +37,7 @@
 
     <!--gradient colors-->
     <color name="gradientJaune">#FFCE00</color>
+    <color name="bgImageMagasins">#FFFFFF</color>
 
 
 </resources>
