--- a/app/src/main/res/layout/fragment_accueil.xml
+++ b/app/src/main/res/layout/fragment_accueil.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".AccueilFragment"
+    tools:context=".ui.accueil.AccueilFragment"
     xmlns:gl="http://schemas.android.com/apk/res-auto">
 
     <androidx.core.widget.NestedScrollView
@@ -105,6 +105,15 @@
                         android:textStyle="bold"/>
 
                 </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+
+                    android:id="@+id/recycler_view_magasins"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="horizontal"
+                    android:orientation="horizontal"
+                    android:clickable="true"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
