--- a/app/src/main/res/layout/magasins_recycler_item.xml
+++ b/app/src/main/res/layout/magasins_recycler_item.xml
@@ -6,13 +6,15 @@
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:clickable="true"
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="10dp"
     xmlns:gl="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="150dp"
         android:layout_alignParentTop="true"
         android:layout_margin="8dp"
         android:minHeight="150dp"
@@ -47,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Carrefour"
-                    android:textColor="#3E1D4B"
+                    android:textColor="@color/whiteTextColor"
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
@@ -57,7 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Adresse : "
-                    android:textColor="#3E1D4B"
+                    android:textColor="@color/whiteTextColor"
                     android:textSize="13sp"
                     android:textStyle="bold" />
 
@@ -67,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Promos en cours : "
-                    android:textColor="#3E1D4B"
+                    android:textColor="@color/whiteTextColor"
                     android:textSize="13sp"
                     android:textStyle="bold" />
 
