--- a/app/src/main/res/layout/promotions_recycler_item.xml
+++ b/app/src/main/res/layout/promotions_recycler_item.xml
@@ -6,12 +6,15 @@
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:clickable="true"
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="10dp"
+    xmlns:gl="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="150dp"
         android:layout_alignParentTop="true"
         android:layout_margin="8dp"
         android:minHeight="150dp"
@@ -19,12 +22,13 @@
         app:cardElevation="10dp"
         app:cardPreventCornerOverlap="false">
 
-        <LinearLayout
-            android:background="#fff"
+        <net.colindodd.gradientlayout.GradientRelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:padding="10dp">
+            android:minHeight="170dp"
+            android:padding="10dp"
+            gl:end_color="@color/gradientJaune"
+            gl:start_color="@color/gradientOrange">
 
             <ImageView
                 android:layout_width="88dp"
@@ -44,7 +48,7 @@
                     android:id="@+id/promotion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#3E1D4B"
+                    android:textColor="@color/whiteTextColor"
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
@@ -53,7 +57,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:textColor="#3E1D4B"
+                    android:textColor="@color/whiteTextColor"
                     android:textSize="13sp"
                     android:textStyle="bold" />
 
@@ -63,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Prix hors promo : "
-                    android:textColor="#3E1D4B"
+                    android:textColor="@color/whiteTextColor"
                     android:textSize="13sp"
                     android:textStyle="bold" />
 
@@ -79,7 +83,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:textColor="#3E1D4B"
+                        android:textColor="@color/whiteTextColor"
                         android:textSize="13sp"
                         android:textStyle="bold" />
 
@@ -88,14 +92,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:textColor="#3E1D4B"
+                        android:textColor="@color/whiteTextColor"
                         android:textSize="13sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
 
             </LinearLayout>
-        </LinearLayout>
+
+        </net.colindodd.gradientlayout.GradientRelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
