--- a/app/src/main/res/layout/image_magasins_recycler_item.xml
+++ b/app/src/main/res/layout/image_magasins_recycler_item.xml
@@ -6,16 +6,17 @@
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:clickable="true"
+    android:paddingHorizontal="10dp"
     xmlns:gl="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:elevation="12dp"
         android:id="@+id/view2"
-        app:cardCornerRadius="60dp"
+        app:cardCornerRadius="50dp"
         android:layout_centerHorizontal="true"
         android:innerRadius="0dp"
         android:shape="ring"
