--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="colorPrimary">#FCFCFC</color>
     <color name="colorPrimaryDark">#2B283D</color>
     <color name="colorAccent">#E91E63</color>
@@ -13,7 +14,7 @@
     <color name="whiteTextColor">#fff</color>
     <color name="frutorial_title">#4c4c4c</color>
     <color name="btn_accueil">#E91E63</color>
-
+    <color name="toolbar">#FCFCFC</color>
     <!--colors for light mode-->
     <color name="contentBodyColor">#FCFCFC</color>
     <color name="contentTextColor">#020000</color>
@@ -38,6 +39,5 @@
     <!--gradient colors-->
     <color name="gradientJaune">#FFCE00</color>
     <color name="bgImageMagasins">#FFFFFF</color>
-
 
 </resources>
