--- a/app/src/main/res/layout/fragment_accueil.xml
+++ b/app/src/main/res/layout/fragment_accueil.xml
@@ -7,7 +7,12 @@
     tools:context=".ui.accueil.AccueilFragment"
     xmlns:gl="http://schemas.android.com/apk/res-auto">
 
+    <include layout="@layout/toolbar" android:id="@+id/toolbar">
+
+    </include>
+
     <androidx.core.widget.NestedScrollView
+        android:paddingTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -81,7 +86,7 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
                     android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginBottom="15dp">
 
                     <TextView
                         android:id="@+id/magasins"
@@ -120,8 +125,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="10dp">
 
                     <TextView
                         android:id="@+id/meilleurOffre"
