--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    android:layout_height="match_parent">
+
+    <include layout="@layout/toolbar_log_sign"></include>
 
     <LinearLayout
         android:orientation="vertical" android:layout_width="match_parent"
@@ -12,49 +13,44 @@
         android:paddingRight="50dp"
         android:paddingLeft="50dp"
         android:paddingTop="130dp"
-        android:background="#2B283D">
+        android:background="@color/contentBodyColor">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="WeBuy"
-            android:textColor="#E91E63"
+            android:text="@string/titreConnection"
+            android:textColor="@color/gradientViolet"
             android:textSize="50sp"
             android:textStyle="bold"
             android:textAlignment="center"
             android:layout_marginBottom="80dp"/>
 
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#7E7E7E"
-            android:text="Email" />
-
         <EditText
-            android:id="@+id/editText4"
+            android:id="@+id/identifiant"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp"
+            android:hint="@string/prompt_email"
+            android:textColorHint="@color/gris_log_sign"
+            android:textColor="@color/gris_log_sign"
+            android:backgroundTint= "@color/gradientViolet"
+            />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#7E7E7E"
-            android:text="Mot de passe" />
 
         <EditText
-            android:id="@+id/editText5"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColorHint="@color/gris_log_sign"
+            android:hint="@string/prompt_password"
             android:ems="10"
-            android:inputType="textPassword"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp"
+            android:textColor="@color/gris_log_sign"
+            android:backgroundTint= "@color/gradientViolet"
+            />
 
         <Button
             android:id="@+id/button2"
@@ -62,21 +58,23 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="Se connecter"
-            android:textColor="#2B283D"
+            android:textColor="@color/text_btn"
             android:background="@drawable/btn_inscription"
             android:layout_margin="10dp"/>
 
         <TextView
             android:layout_marginTop="15dp"
-            android:id="@+id/textView4"
+            android:id="@+id/inscription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="S'inscrire"
-            android:textColor="#E91E63"
+            android:text="@string/inscrire"
+            android:textColor="@color/gradientViolet"
             android:textAlignment="center"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:clickable="true"
+            />
 
 
-    </LinearLayout>
+    </LinearLayout>a
 
 </androidx.constraintlayout.widget.ConstraintLayout>
