--- a/app/src/main/res/layout/magasins_recycler_item.xml
+++ b/app/src/main/res/layout/magasins_recycler_item.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:clickable="true"
-    android:paddingHorizontal="20dp"
     android:paddingVertical="10dp"
     xmlns:gl="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -26,56 +25,72 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:minHeight="170dp"
-            android:padding="10dp"
             gl:end_color="@color/gradientJaune"
             gl:start_color="@color/gradientOrange">
 
-            <ImageView
-                android:layout_width="88dp"
-                android:layout_height="75dp"
-                android:adjustViewBounds="true"
-                android:cropToPadding="true"
-                android:elevation="44dp"/>
 
             <LinearLayout
-                android:layout_width="275dp"
-                android:layout_height="93dp"
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/magasin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Carrefour"
-                    android:textColor="@color/whiteTextColor"
-                    android:textSize="17sp"
-                    android:textStyle="bold" />
+                <LinearLayout
+                    android:layout_width="130dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/whiteTextColor"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/adresse"
+                    <ImageView
+                        android:id="@+id/imageMagasin"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical|center_horizontal"
+                        android:adjustViewBounds="true"
+                        android:cropToPadding="true"
+                        android:elevation="44dp" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Adresse : "
-                    android:textColor="@color/whiteTextColor"
-                    android:textSize="13sp"
-                    android:textStyle="bold" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/promotions"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Promos en cours : "
-                    android:textColor="@color/whiteTextColor"
-                    android:textSize="13sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/magasin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Carrefour"
+                        android:textColor="@color/gradientViolet"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
+                    <TextView
+                        android:id="@+id/adresse"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Adresse : "
+                        android:paddingTop="20dp"
+                        android:textColor="@color/whiteTextColor"
+                        android:textSize="13sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/promotions"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Promos en cours : "
+                        android:paddingTop="5dp"
+                        android:textColor="@color/whiteTextColor"
+                        android:textSize="13sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
             </LinearLayout>
-
-
         </net.colindodd.gradientlayout.GradientRelativeLayout>
 
     </androidx.cardview.widget.CardView>
