--- a/app/src/main/res/layout/toolbar_log_sign.xml
+++ b/app/src/main/res/layout/toolbar_log_sign.xml
@@ -2,7 +2,7 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/toolbar"
+    android:background="@color/contentBodyColor"
     android:elevation="4dp">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -16,7 +16,7 @@
             android:layout_height="24dp"
             android:clickable="true"
             android:src="@drawable/icone_menu"
-            android:tint="@color/gradientOrange" />
+            android:tint="@color/gradientViolet" />
 
         <ImageView
             android:id="@+id/accueil"
@@ -26,7 +26,7 @@
             android:paddingLeft="330dp"
             android:clickable="true"
             android:src="@drawable/ic_home"
-            android:tint="@color/gradientOrange" />
+            android:tint="@color/gradientViolet" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
