--- a/app/src/main/res/layout/fragment_promotion_detail.xml
+++ b/app/src/main/res/layout/fragment_promotion_detail.xml
@@ -7,6 +7,8 @@
     xmlns:gl="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.promotions.PromotionDetailFragment">
 
+    <include layout="@layout/toolbar_detail_promo"></include>
+
     <LinearLayout
         android:orientation="vertical" android:layout_width="match_parent"
         android:background="@color/gradientOrange"
@@ -14,15 +16,17 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="280dp"
+            android:layout_height="290dp"
             android:background="@color/whiteBodyColor"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imagePromoGrand"
-                android:layout_width="230dp"
-                android:layout_height="230dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginBottom="20dp"
+                android:layout_gravity="bottom"
                 android:background="@color/whiteBodyColor"
                 android:maxHeight="200dp" />
         </LinearLayout>
