--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="bottomNavigationTintColor">#B2B2B2</color>
     <color name="bottomNavigationSelectedColor">#E91E63</color>
     <color name="statusBarColor">#000</color>
-    <color name="whiteBodyColor">#FCFCFC</color>
+    <color name="whiteBodyColor">#FFFFFF</color>
     <color name="darkTextColor">#020000</color>
     <color name="primaryTextColor">#019AE8</color>
     <color name="whiteTextColor">#fff</color>
