--- a/app/src/main/res/layout/fragment_amis.xml
+++ b/app/src/main/res/layout/fragment_amis.xml
@@ -25,8 +25,8 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingHorizontal="20dp"
                 android:layout_marginBottom="20dp"
@@ -76,20 +76,6 @@
 
                 </androidx.cardview.widget.CardView>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"/>
-
                 <Button
                     android:id="@+id/se_connecter"
                     android:padding="15dp"
@@ -97,8 +83,9 @@
                     android:layout_height="50dp"
                     android:text="@string/se_connecter"
                     android:textColor="@color/text_btn"
+                    android:layout_marginTop="350dp"
                     android:background="@drawable/btn_inscription"
-                    android:layout_margin="10dp"/>
+                    />
 
             </LinearLayout>
 
