--- a/app/src/main/res/layout/accueil_promotions_recycler_item.xml
+++ b/app/src/main/res/layout/accueil_promotions_recycler_item.xml
@@ -66,27 +66,31 @@
                         android:textColor="@color/gradientViolet"
                         android:textSize="17sp"
                         android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/prix_sans_promo"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="Prix hors promo : "
-                        android:textColor="@color/whiteTextColor"
-                        android:textSize="13sp"
-                        android:textStyle="bold"/>
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/prix_avec_promo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="Prix hors promo : "
-                        android:textColor="@color/gradientViolet"
-                        android:textSize="15sp"
-                        android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/prix_avec_promo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="10dp"
+                            android:text="TextView"
+                            android:textColor="#FFFFFF"
+                            android:textSize="20dp" />
 
+                        <TextView
+                            android:id="@+id/prix_sans_promo"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginBottom="15dp"
+                            android:text="TextView"
+                            android:textColor="#D10000"
+                            android:textSize="15dp" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/quantite_min"
