--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -53,14 +51,14 @@
             />
 
         <Button
-            android:id="@+id/button2"
-            android:padding="15dp"
+            android:id="@+id/se_connecter"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="Se connecter"
-            android:textColor="@color/text_btn"
+            android:layout_margin="10dp"
             android:background="@drawable/btn_inscription"
-            android:layout_margin="10dp"/>
+            android:padding="15dp"
+            android:text="Se connecter"
+            android:textColor="@color/text_btn" />
 
         <TextView
             android:layout_marginTop="15dp"
