--- a/app/src/main/res/layout/fragment_promotion_detail.xml
+++ b/app/src/main/res/layout/fragment_promotion_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -50,7 +49,7 @@
                     android:paddingTop="30dp"
                     android:paddingLeft="30dp"
                     android:paddingRight="30dp">
-
+s
                     <TextView
                         android:id="@+id/nom"
                         android:layout_width="match_parent"
@@ -58,70 +57,71 @@
                         android:layout_marginBottom="15dp"
                         android:text="TextView"
                         android:textColor="#FFFFFF"
-                        android:textSize="22sp"
+                        android:textSize="30dp"
                         android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/prix_hors_promo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:text="TextView"
-                        android:textColor="#FFFFFF"
-                        android:textSize="15sp" />
-
-                    <TextView
-                        android:id="@+id/prix_avec_promo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:text="TextView"
-                        android:textColor="#FFFFFF"
-                        android:textSize="15sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="15sp"
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/quantite_min"
+                            android:id="@+id/prix_avec_promo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
+                            android:layout_marginBottom="10dp"
                             android:text="TextView"
                             android:textColor="#FFFFFF"
-                            android:textSize="15sp" />
+                            android:textSize="30dp" />
 
                         <TextView
-                            android:id="@+id/quantite_requise"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/prix_hors_promo"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginBottom="15dp"
                             android:text="TextView"
-                            android:textColor="#FFFFFF"
-                            android:textSize="15sp" />
+                            android:textColor="#D10000"
+                            android:textSize="15dp" />
+
                     </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/quantite_requise"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="15dp"
+                        android:text="TextView"
+                        android:textColor="#FFFFFF"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/quantite_min"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                       android:paddingBottom="15dp"
+                        android:text="TextView"
+                        android:textColor="#FFFFFF"
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/quantite_restante"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
+                        android:layout_height="45dp"
+                        android:paddingBottom="10dp"
                         android:text="TextView"
                         android:textColor="#FFFFFF"
                         android:textSize="15sp" />
 
                     <Button
                         android:id="@+id/button2"
-                        android:padding="15dp"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:text="S'inscrire"
-                        android:textColor="#FFFFFF"
+                        android:layout_margin="10dp"
                         android:background="@drawable/btn_inscription"
-                        android:layout_margin="10dp"/>
+                        android:padding="15dp"
+                        android:text="@string/Join_group"
+                        android:textColor="#FFFFFF" />
 
                     <TextView
                         android:id="@+id/textView7"
@@ -132,12 +132,16 @@
                         android:textSize="17sp"
                         android:textStyle="bold" />
 
-                    <ListView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="10dp" >
 
-                    </ListView>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_view_groupes"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="horizontal"
+                    android:orientation="horizontal"
+                    android:clickable="true"/>
+
+
 
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
