--- a/app/src/main/res/layout/image_magasins_recycler_item.xml
+++ b/app/src/main/res/layout/image_magasins_recycler_item.xml
@@ -7,7 +7,6 @@
     android:gravity="center_horizontal"
     android:clickable="true"
     android:paddingHorizontal="10dp"
-    xmlns:gl="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
 
@@ -20,7 +19,9 @@
         android:layout_centerHorizontal="true"
         android:innerRadius="0dp"
         android:shape="ring"
-        android:thicknessRatio="1.9">
+        android:thicknessRatio="1.9"
+
+        >
 
         <ImageView
             android:id="@+id/imageView1"
@@ -29,7 +30,8 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/darty"></ImageView>
+            android:src="@drawable/darty"
+            ></ImageView>
 
     </androidx.cardview.widget.CardView>
 
